--- a/app/assets/stylesheets/pages/_bookings.scss
+++ b/app/assets/stylesheets/pages/_bookings.scss
@@ -8,9 +8,7 @@
   display: flex;
   align-items: flex-start;
   margin-bottom: 8px;
-  background: white;
   flex-direction: column;
-  width: 800px;
 }
 
 .booking .img{
@@ -20,7 +18,7 @@
 
 .booking-text{
   padding: 10px;
-  width: 386px;
+  width: 354px;
   border-right: 0.6px solid #F4F4F4;
 }
 .booking-row{
@@ -32,6 +30,9 @@
 .booking .booking-content {
   flex-grow: 1;
   display: flex;
+  margin-bottom: 8px;
+  background-color: #fff;
+  width: 800px;
 }
 
 .booking p {
@@ -45,8 +46,17 @@
 }
 .booking .booking-actions {
   opacity: 0.6;
-  display: flex;
   transition: ease .3s;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.booking-flex{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 16px;
 }
 
 .booking:hover .booking-actions {
@@ -57,7 +67,6 @@
   color: #999999;
   margin-left: 16px;
   font-size: 14px;
-  padding-top: 39px;
 }
 
 .booking .booking-actions a:hover {
