--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,5 +1,6 @@
 .btn-flat {
   padding: 8px 48px;
+  color: #F4F4F4;
   border-radius: 5px;
   background: #F45866;
   transition: background 0.2s ease;
