--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -59,8 +59,8 @@ body{
   box-shadow: 4px 4px 4px #ececec;
   background-color: #FFF;
   position: fixed;
-  bottom: -20px;
-    right: 25px;
+  top: 90px;
+  right: 25px;
 }
 
 .book-price {
