--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,11 +1,12 @@
 .btn-flat {
   padding: 8px 48px;
   border-radius: 5px;
-  background: #F45866;
+  background: #FFFFFF;
   transition: background 0.2s ease;
+  color: #F4F4F4;
 }
 
 .btn-flat:hover {
   color: #DD5800;
-  background-color: #F4F4F4;
+  background-color: #f4f4f4;
 }
