--- a/app/views/grannies/show.html.erb
+++ b/app/views/grannies/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="justify-content-center">
-    <%= link_to "back to grannies", grannies_path , class: " justify-content-center badge rounded-pill bg-secondary" %>
+    <%= link_to "Back", grannies_path , class: " justify-content-center badge rounded-pill bg-secondary" %>
   </div>
   <div class="flex-1">
     <div class="photo">
@@ -36,7 +36,7 @@
       </div>
     </div>
   </div>
-  <div class="row">
+  <div class="row margin-map">
     <div class="col-4">
       <h2>Reviews</h2>
         <% if @reviews.any? %>
