--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -6,6 +6,7 @@
   <%= f.input :photo, as: :file %>
   <%= f.input :description, :as => :text %>
   <%= f.input :fun_fact, :as => :text %>
+  <%= f.input :price, :as => :text %>
   <%= f.input :telephone_number %>
   <%= f.input :email %>
   <%= f.input :house_number %>
